Features:

- build tool to place tracks and connect them
- zooming, scrolling on infinite map
- toolbar to select build tools

Changelog:
- fixed rendering loop bug (remaining sleep time was miscalculated)
- building with single attachment to connection point
- right curved tracks can also be built without connection points now
- migrated to own Point, Line classes
- tracks can be removed, also visual feedback for remove tool
- build straight and curved tracks, can also use connection points
- menu system
- improved render loop
- scrolling depends on current zoom factor
- improved swing/jframe rendering routine
- refactoring, only 2 layers now for map, floor is handled by map
- map uses SimpleList's now, no ConcurrentModificationExceptions :)
- smooth zooming with mousewheel, middleclick-> f=1
- changed to active rendering engine
- InputManager handles input from MouseWheel
- scrolling with wasd
- InputManager handles input from keyboard
- borderless scrolling (map is infinitely big)