@@ -1,10 +1,12 @@
 Features:
 
-- build tool to place tracks and connect them
+- build tools to place tracks and connect them
 - zooming, scrolling on infinite map
 - toolbar to select build tools
 
 Changelog:
+- better rendering for sleepers on tracks
+- improved building tool, builds connected tracks at once
 - fixed rendering loop bug (remaining sleep time was miscalculated)
 - building with single attachment to connection point
 - right curved tracks can also be built without connection points now
